zip/mdapiOTVLwr/unpackaged/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Compliance</fullName>
        <description>Support process for compliance cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Solved</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>External Case</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>CAU1</fullName>
        </values>
        <values>
            <fullName>CAU2</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>IT</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Reopen</fullName>
        </values>
        <values>
            <fullName>Solved</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Internal Case</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>CAU1</fullName>
        </values>
        <values>
            <fullName>CAU2</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Reopen</fullName>
        </values>
        <values>
            <fullName>Solved</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support Payments</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>CAU2</fullName>
        </values>
        <values>
            <fullName>Dismissed</fullName>
        </values>
        <values>
            <fullName>Management Process</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending of Authorization</fullName>
        </values>
        <values>
            <fullName>Refunded funds</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CASE_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Analyst Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PaymentCase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CASE_CAU1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CASE_CAU1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CASE_CHK_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CASE_CHK_ReverseBeneficiaryCredit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reverse beneficiary credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CASE_DATE_StartDateInProgress__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartDateInProgress</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CASE_NUM_DateInprogress__c</fullName>
        <label>TimeInprogress</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CASE_PCK_Beneficiary_country__c</fullName>
        <label>Beneficiary country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_ISO_aplha_code_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CASE_PCK_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_ISO_aplha_code_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CASE_PCK_OrderingCountry__c</fullName>
        <label>Ordering Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_ISO_aplha_code_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CASE_PCK_Record_Type__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case RecordType</fullName>
                </value>
                <value>
                    <fullName>Payment Parent Case</fullName>
                </value>
                <value>
                    <fullName>Payment Child Case</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Payment Case</fullName>
                    <isActive>false</isActive>
                    <label>Payment Case</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CASE_PCK_Sourcesystem__c</fullName>
        <label>Source system</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Mulesoft</fullName>
                </value>
                <value>
                    <fullName>Stratio</fullName>
                </value>
                <value>
                    <fullName>GTS Core</fullName>
                </value>
                <value>
                    <fullName>VAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CASE_PCK_accountCountry__c</fullName>
        <label>Company country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_ISO_aplha_code_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CASE_PCK_contactTime__c</fullName>
        <label>Contact Time</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Weekdays</fullName>
                </value>
                <value>
                    <fullName>Weekend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CASE_Resolutor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resolutor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CASE_Submitter_General__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitter</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CASE_TXT_BICCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BIC Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASE_TXT_PaymentId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASE_TXT_accountGlobalId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Global Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASE_TXT_accountName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASE_TXT_beneficiaryAccountName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Beneficiary account name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASE_TXT_beneficiaryAccountNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Beneficiary account number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASE_TXT_beneficiaryBank__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Beneficiary bank</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASE_TXT_localBankContactEmail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Local bank contact email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CASE_TXT_localBankContactName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Local bank contact name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASE_TXT_sourceAccountName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source account name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASE_TXT_sourceAccountNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source account number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASE_TXT_sourceBank__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source bank</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASE_User_Submitter_General__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CASE_affected_functionality__c</fullName>
        <label>Affected functionality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Global_Balance</fullName>
                    <label>Global Balance</label>
                </value>
                <value>
                    <fullName>International_Payment_Tracker</fullName>
                    <label>International Payment Tracker</label>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                    <default>true</default>
                    <label>Others</label>
                </value>
                <value>
                    <fullName>Payments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Logged_User__c</fullName>
        <formula>IF(CreatedById = $User.Id , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged User</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>NAME</columns>
        <columns>CASE_CAU1__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>Approved_Declined_Payment</fullName>
        <filterScope>Everything</filterScope>
        <label>Approved / Declined Payment</label>
    </listViews>
    <listViews>
        <fullName>Escalated_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Escalated Queue</label>
        <queue>Escalated_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HIGH_OC_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>HIGH OC</label>
        <queue>HIGH_OC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LOW_OC_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>LOW OC</label>
        <queue>LOW_OC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MEDIUM_OC_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>MEDIUM_OC</label>
        <queue>MEDIUM_OC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>New</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Payment_Cases</fullName>
        <filterScope>Everything</filterScope>
        <label>New Payment Cases</label>
    </listViews>
    <listViews>
        <fullName>Sample_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Sample Cases</value>
        </filters>
        <label>Sample Cases</label>
    </listViews>
    <listViews>
        <fullName>ScreeningDowJones_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASE_TXT_PaymentId__c</columns>
        <columns>CASE_TXT_accountName__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Queue</filterScope>
        <label>FC Ops PagoNxt Trade</label>
        <queue>ScreeningDowJones</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Trial_Activities</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Trial</value>
        </filters>
        <label>Trial Activities</label>
    </listViews>
    <recordTypes>
        <fullName>CaseRecordType</fullName>
        <active>true</active>
        <businessProcess>External Case</businessProcess>
        <label>Case RecordType</label>
    </recordTypes>
    <recordTypes>
        <fullName>Compliance</fullName>
        <active>true</active>
        <businessProcess>Compliance</businessProcess>
        <description>Record type for cases due to hits in Dow Jones service</description>
        <label>Compliance</label>
    </recordTypes>
    <recordTypes>
        <fullName>PaymentCase</fullName>
        <active>true</active>
        <businessProcess>Support Payments</businessProcess>
        <label>Payment Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>PaymentChildCase</fullName>
        <active>true</active>
        <businessProcess>Support Payments</businessProcess>
        <label>Payment Child Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>PaymentParentCase</fullName>
        <active>true</active>
        <businessProcess>Support Payments</businessProcess>
        <label>Payment Parent Case</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Approval_Status</fullName>
        <active>true</active>
        <description>Analyst cannot be same Resolutor Case</description>
        <errorConditionFormula>AND(
    RecordType.Name = &apos;Payment Case&apos;,
    CASE_Analyst__c = CASE_Resolutor__c,
				ISPICKVAL(Status, &apos;Refunded to the payer&apos;) 
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Case must be send to approval. Please, send case to other user to approve or decline the related payment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAU1_Change_Owner_Permission</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
								ISCHANGED(OwnerId),
				    NOT ISCHANGED(Status),
								$User.Change_Owner__c = false,
								$Profile.Name = &apos;Local Support&apos;
)</errorConditionFormula>
        <errorMessage>CAU1 can not change owner because is not supervisor.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAU1_cannot_change</fullName>
        <active>false</active>
        <errorConditionFormula>AND(CASE_CAU1__r.Id = $User.Id, ISCHANGED(Status),  OR(ISPICKVAL(Status, &apos;New&apos;),ISPICKVAL(Status, &apos;CAU1&apos;),ISPICKVAL(Status, &apos;IT&apos;)))</errorConditionFormula>
        <errorMessage>You can only close the case or return it to CAU2</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAU1_cannot_change_R1</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
				AND(
							OR(
											$Profile.Name = &apos;Intranet GTS Support Partner&apos;,
											$Profile.Name = &apos;Local Support&apos;
							),				
				   CASE_CAU1__r.Id = $User.Id,
				   ISCHANGED(Status),
				   OR(
								   ISPICKVAL(Status, &apos;New&apos;),
								   ISPICKVAL(Status, &apos;CAU1&apos;),
								   ISPICKVAL(Status, &apos;IT&apos;)
				   )
    ),
				AND(
				    OR(
							    $Profile.Name = &apos;Intranet GTS Support Partner&apos;,
											$Profile.Name = &apos;Local Support&apos;
					   ),		
				    ISBLANK(CASE_CAU1__r.Id),
				    ISCHANGED(Status),
				    OR(
								    ISPICKVAL(Status, &apos;New&apos;),
								    ISPICKVAL(Status, &apos;CAU1&apos;),
								    ISPICKVAL(Status, &apos;IT&apos;)
				    )
    )
	)</errorConditionFormula>
        <errorMessage>You can only close the case or return it to CAU2</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAU1_cannot_change_R2</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
				AND(
							OR(
											$Profile.Name = &apos;Intranet GTS Support Partner&apos;,
											$Profile.Name = &apos;Local Support&apos;
							),				
				   CASE_CAU1__r.Id = $User.Id,
				   ISCHANGED(Status),
				   OR(
								   ISPICKVAL(Status, &apos;New&apos;),
								   ISPICKVAL(Status, &apos;CAU1&apos;),
								   ISPICKVAL(Status, &apos;IT&apos;),
											ISPICKVAL(Status, &apos;Closed Solved&apos;)
				   ),
							NOT(ISPICKVAL(PRIORVALUE(Status),&quot;Reopen&quot;))
    ),
				AND(
				    OR(
							    $Profile.Name = &apos;Intranet GTS Support Partner&apos;,
											$Profile.Name = &apos;Local Support&apos;
					   ),		
				    ISBLANK(CASE_CAU1__r.Id),
				    ISCHANGED(Status),
				    OR(
								    ISPICKVAL(Status, &apos;New&apos;),
								    ISPICKVAL(Status, &apos;CAU1&apos;),
								    ISPICKVAL(Status, &apos;IT&apos;),
											 ISPICKVAL(Status, &apos;Closed Solved&apos;)
				    ),
								NOT(ISPICKVAL(PRIORVALUE(Status),&quot;Reopen&quot;))
    )
	)</errorConditionFormula>
        <errorMessage>You can only close the case or return it to CAU2</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAU1_cannot_edit_the_case_if_not_owner</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
				NOT(ISNEW()), 
    CASE_CAU1__c = $User.Id,
    OR(
        AND(
            NOT(ISCHANGED(Status)),
												OR(
                ISPICKVAL(Status,&apos;In progress&apos;),
                ISPICKVAL(Status,&apos;IT&apos;),
																ISPICKVAL(Status,&apos;New&apos;)
												)
        ),
        AND(
            ISCHANGED(Status),
												OR(
                ISPICKVAL(PRIORVALUE(Status),&apos;In progress&apos;),
                ISPICKVAL(PRIORVALUE(Status),&apos;IT&apos;),
																ISPICKVAL(PRIORVALUE(Status),&apos;New&apos;)
												)
        )
    )
)</errorConditionFormula>
        <errorMessage>You cannot edit the Case because you don&apos;t own it</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAU1_new_case</fullName>
        <active>true</active>
        <description>CAU1 can only create cases with status equals new.</description>
        <errorConditionFormula>AND(
				ISNEW(),
    NOT ISPICKVAL(Status, &apos;New&apos;),
				OR(
								($Profile.Name = &apos;Intranet GTS Support Partner&apos;),
				    ($Profile.Name = &apos;Local Support&apos;)
				) 				
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>The status must be New</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAU2_Change_Owner_Permission</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    ISCHANGED(OwnerId),
				NOT ISCHANGED(Status),
				$User.Change_Owner__c = false,
				$Profile.Name = &apos;Support&apos;
)</errorConditionFormula>
        <errorMessage>CAU2 can not change owner because is not supervisor.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAU2_available_status</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  NOT ISNEW(),
		ISBLANK(CASE_CAU1__r.Id),
  ISPICKVAL(Status, &apos;CAU1&apos;),
  ($Profile.Name = &apos;Support&apos;)
)</errorConditionFormula>
        <errorMessage>The status CAU1 is not availble in case created by CAU2</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAU2_can_not_close_a_case</fullName>
        <active>false</active>
        <errorConditionFormula>AND($User.Id = CASE_Resolutor__r.Id,
				ISCHANGED(Status),
				NOT(CreatedBy.Profile.Name = &apos;Support&apos;),
				OR(
								ISPICKVAL(Status, &apos;Closed Cancelled&apos;),
								ISPICKVAL(Status, &apos;Closed Solved&apos;)
				)
)</errorConditionFormula>
        <errorMessage>You are not able to close a case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAU2_can_not_close_a_case_R1</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
    AND(
								$Profile.Name = &apos;Support&apos;,
								NOT ISBLANK(CASE_CAU1__r.Id),
        $User.Id = CASE_Resolutor__r.Id,ISCHANGED(Status),
        OR(
            ISPICKVAL(Status, &apos;Closed Cancelled&apos;),
            ISPICKVAL(Status, &apos;Closed Solved&apos;)
        )
    ),
    AND(
								$Profile.Name = &apos;Support&apos;,
								NOT ISBLANK(CASE_CAU1__r.Id),
        ISBLANK(CASE_Resolutor__r.Id),ISCHANGED(Status),
        OR(
            ISPICKVAL(Status, &apos;Closed Cancelled&apos;),
            ISPICKVAL(Status, &apos;Closed Solved&apos;)
        )
    )
)</errorConditionFormula>
        <errorMessage>You are not able to close a case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAU2_can_not_close_a_case_R2</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
    AND(
	        $Profile.Name = &apos;Support&apos;,
	        NOT ISBLANK(CASE_CAU1__r.Id),
         $User.Id = CASE_Resolutor__r.Id,
	        ISCHANGED(Status),
         ISPICKVAL(Status, &apos;Closed Cancelled&apos;)
    ),
    AND(
	        $Profile.Name = &apos;Support&apos;,
	        NOT ISBLANK(CASE_CAU1__r.Id),
         ISBLANK(CASE_Resolutor__r.Id),
	        ISCHANGED(Status),
         ISPICKVAL(Status, &apos;Closed Cancelled&apos;)
    ),
				AND(
	        $Profile.Name = &apos;Support&apos;,
	        ISBLANK(CASE_CAU1__r.Id),
         ISBLANK(CASE_Resolutor__r.Id),
	        ISCHANGED(Status),
         ISPICKVAL(Status, &apos;Closed Cancelled&apos;)
    ),
				AND(
	        $Profile.Name = &apos;Support&apos;,
	        ISBLANK(CASE_CAU1__r.Id),
	        ISCHANGED(Status),
         ISPICKVAL(Status, &apos;Closed Cancelled&apos;)
    )
)</errorConditionFormula>
        <errorMessage>You are not able to close a case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAU2_cannot_edit_the_case_if_owner_CAU1</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    $Profile.Name = &apos;Support&apos;,
    OR(
        AND(
            NOT(ISCHANGED(Status)),
            ISPICKVAL(Status,&apos;CAU1&apos;)
        ),
        AND(
            ISCHANGED(Status),
            ISPICKVAL(PRIORVALUE(Status),&apos;CAU1&apos;)
        )
    )
)</errorConditionFormula>
        <errorMessage>You cannot edit the case if the owner is CAU1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAU2_case_not_Cau1_status</fullName>
        <active>false</active>
        <description>If the case is created by CAU2 the CAU1 status is not valid.</description>
        <errorConditionFormula>AND(
    ISCHANGED(Status),
				OR(
				    IsClosed != true,
								NOT (ISPICKVAL(PRIORVALUE(Status),&apos;Closed Cancelled&apos;))
				),
    ISBLANK(CASE_CAU1__r.Id),
    ISPICKVAL(Status, &apos;CAU1&apos;),
    ($Profile.Name = &apos;Support&apos;)
)</errorConditionFormula>
        <errorMessage>The CAU1 status is not available.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAU2_case_not_return_to_new</fullName>
        <active>false</active>
        <description>The case can not return to status equals New</description>
        <errorConditionFormula>AND(
				ISCHANGED(Status),
				NOT(IsClosed),
    ISPICKVAL(Status, &apos;New&apos;),
    ($Profile.Name = &apos;Support&apos;)
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>The status must be different to New</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAU2_case_not_return_to_new_R1</fullName>
        <active>false</active>
        <description>The case can not return to status equals New</description>
        <errorConditionFormula>AND(
				ISCHANGED(Status),
			 NOT(							
								 ISPICKVAL(PRIORVALUE(Status),&quot;Reopen&quot;)
								), 
    ISPICKVAL(Status, &apos;New&apos;),
    ($Profile.Name = &apos;Support&apos;)
)</errorConditionFormula>
        <errorMessage>The status must be different to New</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAU2_case_not_return_to_new_R2</fullName>
        <active>true</active>
        <description>The case can not return to status equals New</description>
        <errorConditionFormula>AND(
  NOT ISNEW(), 
  ISCHANGED(Status),
  NOT(															 
    ISPICKVAL(PRIORVALUE(Status),&quot;Reopen&quot;)								 
  ), 
  ISPICKVAL(Status, &apos;New&apos;),
  ($Profile.Name = &apos;Support&apos;)
)</errorConditionFormula>
        <errorMessage>The status must be different to New</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAU2_case_solved</fullName>
        <active>false</active>
        <description>If the case is created by CAU2 this status is not valid.</description>
        <errorConditionFormula>AND(
    ISCHANGED(Status),
				OR(
				    IsClosed != true,
								NOT (ISPICKVAL(PRIORVALUE(Status),&apos;Closed Cancelled&apos;))
				),
    ISBLANK(CASE_CAU1__r.Id),
				OR(
				    ISPICKVAL(Status, &apos;IT&apos;),
								ISPICKVAL(Status, &apos;CAU1&apos;),
								ISPICKVAL(Status, &apos;In Progress&apos;)
				), 
    ($Profile.Name = &apos;Support&apos;)
)</errorConditionFormula>
        <errorMessage>This status is not available.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAU2_case_solved_R1</fullName>
        <active>true</active>
        <description>If the case is created by CAU2 this status is not valid.</description>
        <errorConditionFormula>AND(
    ISCHANGED(Status),
    ($Profile.Name = &apos;Support&apos;),
    ISBLANK(CASE_CAU1__r.Id),								 
    ISPICKVAL(PRIORVALUE(Status),&apos;Closed Solved&apos;),
    OR(
	ISPICKVAL(Status, &apos;IT&apos;),								 
        ISPICKVAL(Status, &apos;CAU1&apos;),								 
        ISPICKVAL(Status, &apos;In Progress&apos;)
    ) 
)</errorConditionFormula>
        <errorMessage>This status is not available for Solved Case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAU2_new_case</fullName>
        <active>false</active>
        <description>CAU2 can only create new cases with status equals new.</description>
        <errorConditionFormula>AND(
				ISNEW(),
    NOT ISPICKVAL(Status, &apos;New&apos;),
				($Profile.Name = &apos;Support&apos;) 				
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>The status must be New</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAU2_new_case_R1</fullName>
        <active>true</active>
        <description>CAU2 can only create new cases with status equals new.</description>
        <errorConditionFormula>AND(
        ISNEW(),
        OR(
				        ISPICKVAL(Status, &apos;CAU1&apos;),
				        ISPICKVAL(Status, &apos;IT&apos;),
				        ISPICKVAL(Status, &apos;Closed Solved&apos;),
				        ISPICKVAL(Status, &apos;Closed Cancelled&apos;),
				        ISPICKVAL(Status, &apos;Reopen&apos;)
				    ), 
				    ($Profile.Name = &apos;Support&apos;) 				
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>The status must be New</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ChangeStatusBlocked</fullName>
        <active>false</active>
        <description>Block record modification when Case is closed less with reopen status.</description>
        <errorConditionFormula>AND ((IsClosed = TRUE), 
					     						
					OR (
									ISPICKVAL(Status, &apos;New&apos;), 
									ISPICKVAL(Status, &apos;CAU1&apos;),
									ISPICKVAL(Status, &apos;IT&apos;), 
									ISPICKVAL(Status, &apos;In progress&apos;), 
									ISPICKVAL(Status, &apos;Closed Solved&apos;))
					)</errorConditionFormula>
        <errorMessage>It is not possible to modify a closed case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ChangeStatusBlocked_R1</fullName>
        <active>false</active>
        <description>Block record modification when Case is closed less with reopen status.</description>
        <errorConditionFormula>AND ((IsClosed = TRUE), 					     						
					OR (
									ISPICKVAL(Status, &apos;New&apos;), 
									ISPICKVAL(Status, &apos;CAU1&apos;),
									ISPICKVAL(Status, &apos;IT&apos;), 
									ISPICKVAL(Status, &apos;In progress&apos;), 
									ISPICKVAL(Status, &apos;Closed Solved&apos;),
								 ISPICKVAL(Status, &apos;Closed Cancelled&apos;)
					)
)</errorConditionFormula>
        <errorMessage>It is not possible to modify a closed case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Change_Owner_CaseClosed_CAU1</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
					   ISCHANGED(OwnerId),
								NOT ISCHANGED(Status),
				    $Profile.Name = &apos;Local Support&apos;,
				    $User.Change_Owner__c = true,	
								ISPICKVAL (Status, &apos;Closed Cancelled&apos;)
)</errorConditionFormula>
        <errorMessage>This status not allow to change owner.</errorMessage>
    </validationRules>
</CustomObject>